--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+h1{
+  font-family: Georgia;
+  text-align: center;
+}
+p{
+  font-family: Georgia;
+  text-align: center;
+}
+.number{
+  font-family: Georgia;
+}
+fieldset{
+  font-family: Georgia;
+  border: none;
+  padding: 2rem 0;
+}
+input{
+  margin: 10px 0 0 0;
+  width: 100%;
+}
+.recommend{
+ display: block;
+}
+body{
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: #f5f6f7
+}
+input {
 
+}
+form, input[type="radio"]{
+  max-width: 500px;
+  min-width: 300px;
+  width: 60vw;
+  margin: 0 auto;
+}
