--- a/index.html
+++ b/index.html
@@ -1,38 +1,26 @@
-h1{
-  font-family: Georgia;
-  text-align: center;
-}
-p{
-  font-family: Georgia;
-  text-align: center;
-}
-.number{
-  font-family: Georgia;
-}
-fieldset{
-  font-family: Georgia;
-  border: none;
-  padding: 2rem 0;
-}
-input{
-  margin: 10px 0 0 0;
-  width: 100%;
-}
-.recommend{
- display: block;
-}
-body{
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  background-color: #f5f6f7
-}
-input {
-
-}
-form, input[type="radio"]{
-  max-width: 500px;
-  min-width: 300px;
-  width: 60vw;
-  margin: 0 auto;
-}
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="UTF-8">
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<h1 id="title">Survey Form</h1>
+<p id="description">Please fill in this short survey to help improve our platform! Thank you!</p>
+<form id="survey-form">
+  <fieldset>
+<label id="name-label" >Name: <input id="name" type="text" placeholder="Joe Bloggs" required></label>
+<label id="email-label">Email: <input id="email" type="email" placeholder="Example123@gmail.com" required></label>
+<label id="number-label">Age: <input id="number" type="number" min="13" max="120" placeholder="50"></label>
+<label id="dropdown-label">What is your current occupation: <select id="dropdown"><option disabled="" selected="" value="">Select one please</option><option>Student</option><option>Full Time Job</option><option>Part Time Learner</option></label>
+<textarea id="Other" name="Other" rows="3" cols="55" placeholder="Any additional ideas: "></textarea>
+  </form>
+<input id="recommend" type="radio" name="yes" value="option" class="inline" name="yes" checked>Definetly</label>
+<input id="recommend" type="radio" value="option" class="inline" name="yes">Maybe</label>
+<input id="recommend" class="inline" type="radio" value="option" name="yes">No</label>
+<input type="checkbox" value="1"></input>
+<input type="checkbox" value="1"></input>
+<input id="submit" class="submit-button" type="Submit" value="Submit"></button>
+</fieldset>
+</body>
+</html>
